Added jfx zip to files