@@ -1,2 +1,7 @@
 # WaltonRobotics-Training-Game
 A game intended to attract interest for programming and to be used to gauge skill, interest, and initiative.
+<br><br>
+
+You will need to extract the contents of jfx-11.0.2-win64 and edit VM options:
+<br>
+--module-path <path-to-jfx> --add-modules javafx.controls,javafx.fxml
